Fix weak break-word support on safari

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -2,10 +2,12 @@
 
 html {
     overflow-x: auto;
+}
 
-    @media only screen and (max-width: $sm-point) {
-      word-break: break-word;
-    }
+main {
+  @media only screen and (max-width: $sm-point) {
+    word-break: break-word;
+  }
 }
 
 .dg {
